# Sanajahti-solver

./: .gitignore  .release_time  CMakeLists.txt  Makefile  README.md  kotus.txt  sanajahti  sanajahti.pro
src/: UI.cpp  UI.hpp  adb_screenshot.cpp  adb_screenshot.hpp  commands.py  console.cpp  console.hpp  kotus.txt  main.cpp  ocr.cpp  ocr.hpp  sanajahti.pro  solver.cpp  solver.hpp  solver_thread.cpp  solver_thread.hpp  to64bitchars.cpp  to64bitchars.hpp  trie.cpp  trie.hpp  ui.cpp  ui.hpp  window.cpp  window.hpp
src/sanajahti.app/Contents/: Info.plist
src/sanajahti.app/Contents/MacOS/: sanajahti
test/: CMakeLists.txt  test_sanajahti.cpp
test/gtest-1.7.0/make/: sample1_unittest
tools/: joku.bat
